Breadcrumbs no longer overlap with the header.

--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -481,7 +481,6 @@ footer .copyright a {
 }
 
 #documentation .breadcrumbs {
-  margin-top: -20px;
   margin-bottom: 15px;
 }
 
